// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        disabled={false}
        error={null}
        fullWidth={true}
        label="Item name"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the item name"
        required={false}
        select={false}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        disabled={true}
        error={null}
        fullWidth={true}
        label="Item name"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the item name"
        required={false}
        select={false}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    display="row"
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      sm={10}
      xs={12}
    >
      <TextField
        disabled={false}
        error={null}
        fullWidth={true}
        onChange={[Function]}
        onKeyPress={[Function]}
        required={false}
        select={false}
        value="one"
      />
      <WithStyles(Typography)
        className=""
        variant="caption"
      >
        reminder text
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      sm={2}
      xs={12}
    >
      <RaisedButton
        className="is-mui-spacing-button"
        disabled={true}
        fullWidth={true}
        label="Add"
        labelPosition="after"
        onClick={[Function]}
        primary={true}
        secondary={false}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
